applications/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  type: NodePort
  ports:
    - port: 8123
      targetPort: http
      nodePort: 30123
      protocol: TCP
      name: http
  selector:
    app: home-assistant
